fix weird layout issue with really large screens

--- a/frontend-react/src/styles/_reportstream.scss
+++ b/frontend-react/src/styles/_reportstream.scss
@@ -666,7 +666,7 @@ pre {
 
 .rs-revision-history {
     width: max-content;
-    min-width: 80vw;
+    min-width: 60vw;
     .rs-list-diffs-container {
         height: 25em;
         color: white;
